syntax = "proto3";
import "message/Vec2i.proto";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.model.world";
option java_outer_classname = "TileProto";

message TileRpcDto {
  Vec2iRpcDto position = 1;
  string textId = 2;
}
