syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.model";
option java_outer_classname = "Vec2iProto";

message Vec2iRpcDto {
  int32 x = 1;
  int32 y = 2;
}
